force-app/main/default/objects/Plan__c/fields/Most_Recent_Review_Sponsor_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Review_Sponsor_Trustee__c</fullName>
    <description>Most Recent Review given by a sponsor/trustee.</description>
    <inlineHelpText>Most Recent Review given by a sponsor/trustee.</inlineHelpText>
    <label>Deprecated- Recent Review (Spnsr/Trus)-</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>