force-app/main/default/objects/Plan__c/fields/Non_ACH_Fee_Start__c.field-meta.xml
<CustomField>
    <fullName>Non_ACH_Fee_Start__c</fullName>
    <description>Date fees started to be charged for not using ACH to fund the plan.   If blank, review waiver fields to verify if/when waiver expires.</description>
    <inlineHelpText>Date fees started to be charged for not using ACH to fund the plan.   If blank, review waiver fields to verify if/when waiver expires.</inlineHelpText>
    <label>Non-ACH Fee Start</label>
    <type>Date</type>
</CustomField>