force-app/main/default/objects/Plan__c/fields/Non_ACH_Fee_Waived_Indefinitely__c.field-meta.xml
<CustomField>
    <fullName>Non_ACH_Fee_Waived_Indefinitely__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms that clients not using ACH to fund plan have had the non-ACH fee waived indefinitely</description>
    <inlineHelpText>Confirms that clients not using ACH to fund plan have had the non-ACH fee waived indefinitely</inlineHelpText>
    <label>Non-ACH Fee Waived Indefinitely</label>
    <type>Checkbox</type>
</CustomField>