force-app/main/default/objects/Plan__c/fields/Non_ACH_Fee_Waiver_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Non_ACH_Fee_Waiver_Expiration__c</fullName>
    <description>Date the fee waiver for clients not using ACH to fund the plan expires</description>
    <inlineHelpText>Date the fee waiver for clients not using ACH to fund the plan expires</inlineHelpText>
    <label>Non-ACH Fee Waiver Expiration</label>
    <type>Date</type>
</CustomField>