force-app/main/default/objects/Plan__c/fields/NPS_HM_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_HM_Score__c</fullName>
    <description>Used to get weighted average of NPS scores for Health Metric.</description>
    <formula>IF( 
(ISNULL( Most_Recent_NPS_Score_Saver__c )= True &amp;&amp; ISNULL( Most_Recent_NPS_Score_Sponsor_Trustee__c )= False), 
CASE((Most_Recent_NPS_Score_Sponsor_Trustee__c),1,-1,2, -1,3,-1,4,-1,5,-1,6,-1,7,0,8,0,9,1,10,1,0), 
IF( 
(ISNULL(Most_Recent_NPS_Score_Saver__c)= False &amp;&amp; ISNULL(Most_Recent_NPS_Score_Sponsor_Trustee__c)=True), 
CASE((Most_Recent_NPS_Score_Saver__c),1,-1,2, -1,3,-1,4,-1,5,-1,6,-1,7,0,8,0,9,1,10,1,0), 
IF( 
(ISNULL(Most_Recent_NPS_Score_Saver__c)= False &amp;&amp; ISNULL(Most_Recent_NPS_Score_Sponsor_Trustee__c)=False), 
CASE(ROUND((Most_Recent_NPS_Score_Saver__c*0.2)+(Most_Recent_NPS_Score_Sponsor_Trustee__c*0.8),0), 1,-1,2, -1,3,-1,4,-1,5,-1,6,-1,7,0,8,0,9,1,10,1,0),0)))</formula>
    <inlineHelpText>Used to get weighted average of NPS scores for Health Metric.</inlineHelpText>
    <label>NPS HM Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>