force-app/main/default/objects/Plan__c/fields/Number_of_Brokerage_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Brokerage_Accounts__c</fullName>
    <description>Number of Brokerage Accounts plan is using and paying for.</description>
    <inlineHelpText>Number of Brokerage Accounts plan is using and paying for.</inlineHelpText>
    <label>Number of Brokerage Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>