force-app/main/default/objects/Plan__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Removed from layout 8.4.2020 - see case 570202.    We aren&apos;t tracking active + terminated but instead just Active.   Active EE is already on Plan and feeds to Account</description>
    <formula>Account__r.NumberOfEmployees</formula>
    <inlineHelpText>Employees on Census (Active + Terminated)</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>