force-app/main/default/objects/Plan__c/fields/Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Offset_Days__c</fullName>
    <description>Number of Days in payroll offset.</description>
    <inlineHelpText>Number of Days in payroll offset.</inlineHelpText>
    <label>Offset Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>