force-app/main/default/objects/Plan__c/fields/Original_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Plan_Effective_Date__c</fullName>
    <description>First Plan Effective date, if it is a Conversion Plan with a prior plan effective date</description>
    <inlineHelpText>First Plan Effective date, if it is a Conversion Plan with a prior plan effective date</inlineHelpText>
    <label>Original Plan Effective Date</label>
    <type>Date</type>
</CustomField>