force-app/main/default/objects/Plan__c/fields/Paradigm_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Company_ID__c</fullName>
    <description>Company ID for Paradigm</description>
    <inlineHelpText>Company ID for Paradigm</inlineHelpText>
    <label>Paradigm Company ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>