force-app/main/default/objects/Plan__c/fields/Paradigm_Company_Link__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Company_Link__c</fullName>
    <description>Click this to go to Company in Paradigm</description>
    <inlineHelpText>Click this to go to  Company in Paradigm</inlineHelpText>
    <label>Paradigm Company Link</label>
    <type>Url</type>
</CustomField>