force-app/main/default/objects/Plan__c/fields/Paradigm_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Plan_ID__c</fullName>
    <description>Plan ID for Paradigm</description>
    <externalId>true</externalId>
    <inlineHelpText>Plan ID for Paradigm</inlineHelpText>
    <label>Paradigm Plan ID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>