force-app/main/default/objects/Plan__c/fields/Paradigm_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Plan_Link__c</fullName>
    <description>Updated automatically from Implementation Object</description>
    <inlineHelpText>Updated automatically from Implementation Object</inlineHelpText>
    <label>Paradigm Plan Link</label>
    <type>Url</type>
</CustomField>