force-app/main/default/objects/Plan__c/fields/Participant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fee__c</fullName>
    <description>Amount charged to participants with plan balance over $100</description>
    <inlineHelpText>Amount charged to participants with plan balance over $100</inlineHelpText>
    <label>Participant Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>