force-app/main/default/objects/Plan__c/fields/Participant_Fee_Payment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fee_Payment__c</fullName>
    <description>Who will be responsible for paying the participant fee?</description>
    <inlineHelpText>Who will be responsible for paying the participant fee?</inlineHelpText>
    <label>Participant Fee Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Not Determined</fullName>
                <label>Not determined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>