force-app/main/default/objects/Plan__c/fields/Participant_Fees_Paid_from_ESA__c.field-meta.xml
<CustomField>
    <fullName>Participant_Fees_Paid_from_ESA__c</fullName>
    <description>Will participant fees be paid from ERISA Spend Account?</description>
    <inlineHelpText>Will participant fees be paid from ERISA Spend Account?</inlineHelpText>
    <label>Participant Fees Paid from ESA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>