force-app/main/default/objects/Plan__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Clients with shared SLAs will appear here.</description>
    <formula>Account__r.Partner_Logo__c</formula>
    <inlineHelpText>Clients with shared SLAs will appear here.</inlineHelpText>
    <label>Partner</label>
    <type>Text</type>
</CustomField>