force-app/main/default/objects/Plan__c/fields/Payroll_Escalation_Tier__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Escalation_Tier__c</fullName>
    <label>Payroll Escalation Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>