force-app/main/default/objects/Plan__c/fields/Payroll_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Frequency_Days__c</fullName>
    <description>Used for reporting and formulas</description>
    <formula>CASE(TEXT(Payroll_Schedule__c ), &quot;Weekly&quot;,10, &quot;Bi-Weekly&quot;,20,&quot;Semi-Monthly&quot;,25,&quot;Semi-Monthly (OffCycle)&quot;,25,&quot;Monthly&quot;,40,&quot;Annual&quot;,375,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for reporting and formulas</inlineHelpText>
    <label>Payroll Frequency Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>