force-app/main/default/objects/Plan__c/fields/Payroll_HM_Score__c.field-meta.xml
<CustomField>
    <fullName>Payroll_HM_Score__c</fullName>
    <description>Current Payroll Status = 1 
Not Contributing Payroll Status = 0
Behind or Never Contributed Payroll Status = -1</description>
    <formula>IF( ISPICKVAL(  Payroll_Submission_Status__c  , &quot;Current&quot;),1,
IF( ISPICKVAL(  Payroll_Submission_Status__c  , &quot;Implementation&quot;),1,
IF( ISPICKVAL(  Payroll_Submission_Status__c  , &quot;&quot;),0,
IF( ISPICKVAL(  Payroll_Submission_Status__c  , &quot;Not Contributing&quot;),0,
-1))))</formula>
    <inlineHelpText>Current Payroll Status = 1 
Not Contributing Payroll Status = 0
Behind or Never Contributed Payroll Status = -1</inlineHelpText>
    <label>Payroll HM Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>