force-app/main/default/objects/Plan__c/fields/Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Provider__c</fullName>
    <formula>TEXT( Account__r.Payroll_Provider__c )</formula>
    <label>Payroll Provider</label>
    <type>Text</type>
</CustomField>