force-app/main/default/objects/Plan__c/fields/Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule__c</fullName>
    <label>Payroll Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payroll_Schedule</valueSetName>
    </valueSet>
</CustomField>