force-app/main/default/objects/Plan__c/fields/Payroll_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Method__c</fullName>
    <description>What method was used to submit the most recent payroll.</description>
    <inlineHelpText>What method was used to submit the most recent payroll.</inlineHelpText>
    <label>Payroll Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin Upload</fullName>
            </value>
            <value>
                <fullName>Batch Upload</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Finch</fullName>
            </value>
            <value>
                <fullName>Payroll Integration</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>