force-app/main/default/objects/Plan__c/fields/Payroll_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Status__c</fullName>
    <description>Used to track if client is actively submitting their payroll.</description>
    <inlineHelpText>Used to track if client is actively submitting their payroll.</inlineHelpText>
    <label>Payroll Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Behind</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Never Submitted</fullName>
            </value>
            <value>
                <fullName>Not Contributing</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Plan Termination/Deconversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>