force-app/main/default/objects/Plan__c/fields/Payroll_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Submission_Type__c</fullName>
    <description>How does the client submit their Payrolls?</description>
    <inlineHelpText>How does the client submit their Payrolls?</inlineHelpText>
    <label>Payroll Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhanced Payroll Services</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Third Party Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>