force-app/main/default/objects/Plan__c/fields/Plan_Age__c.field-meta.xml
<CustomField>
    <fullName>Plan_Age__c</fullName>
    <description>Today&apos;s date minus the plan sold date divided by 365</description>
    <formula>(TODAY()-Plan_Sold_Date__c)/365</formula>
    <inlineHelpText>Today&apos;s date minus the plan sold date divided by 365</inlineHelpText>
    <label>Plan Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>