force-app/main/default/objects/Plan__c/fields/Plan_Amended__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if Plan provisions are amended at any point. I.E. Fund Lineup Change.</description>
    <inlineHelpText>To be checked if Plan provisions are amended at any point. I.E. Fund Lineup Change.</inlineHelpText>
    <label>Plan Amended</label>
    <type>Checkbox</type>
</CustomField>