force-app/main/default/objects/Plan__c/fields/Plan_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amendment_Date__c</fullName>
    <description>Date the Plan is Amended. If Plan has had multiple Amendments use most recent date.</description>
    <inlineHelpText>Date the Plan is Amended. If Plan has had multiple Amendments use most recent date.</inlineHelpText>
    <label>Plan Amendment Date</label>
    <type>Date</type>
</CustomField>