force-app/main/default/objects/Plan__c/fields/Plan_Billable_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Plan_Billable_Headcount__c</fullName>
    <description>Updated from the monthly Plan Asset record. Count of all Employees with over $100.</description>
    <inlineHelpText>Updated from the monthly Plan Asset record. Count of all Employees with over $100.</inlineHelpText>
    <label>Plan Billable Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>