force-app/main/default/objects/Plan__c/fields/Plan_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Plan_Eligibility__c</fullName>
    <label>Plan Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan_Eligibility</valueSetName>
    </valueSet>
</CustomField>