force-app/main/default/objects/Plan__c/fields/Plan_Entry_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Plan_Entry_Frequency__c</fullName>
    <label>Plan Entry Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan_Entry_Frequency</valueSetName>
    </valueSet>
</CustomField>