force-app/main/default/objects/Plan__c/fields/Plan_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Plan_Exceptions__c</fullName>
    <description>Use this field to note any exceptions to the plan/plan provisions</description>
    <inlineHelpText>Use this field to note any exceptions to the plan/plan provisions</inlineHelpText>
    <label>Plan Exceptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>