force-app/main/default/objects/Plan__c/fields/Plan_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Plan_ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan ID (18 Char)</label>
    <type>Text</type>
</CustomField>