force-app/main/default/objects/Plan__c/fields/Plan_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sold_Date__c</fullName>
    <description>This is the date that this plan was first sold and the client signed an A4S with Ubiquity/TOK.</description>
    <inlineHelpText>This is the date that this plan was first sold and the client signed an A4S with Ubiquity/TOK.</inlineHelpText>
    <label>Plan Sold Date</label>
    <type>Date</type>
</CustomField>