force-app/main/default/objects/Plan__c/fields/Plan_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Transition_Date__c</fullName>
    <description>Date on which plan became inactive due to termination or deconversion.</description>
    <inlineHelpText>Date on which plan became inactive due to termination or deconversion.</inlineHelpText>
    <label>Plan Transition Date</label>
    <type>Date</type>
</CustomField>