force-app/main/default/objects/Plan__c/fields/Plan_Type1__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type1__c</fullName>
    <description>Plan type (new, conversion, upgrade)</description>
    <inlineHelpText>Plan type (new, conversion, upgrade)</inlineHelpText>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Conversion Plan</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>