force-app/main/default/objects/Plan__c/fields/Plan_Upgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Upgrade_Date__c</fullName>
    <description>Date that Plan is Upgraded. If Plan has been Upgraded multiple times, use date of most recent Upgrade.</description>
    <inlineHelpText>Date that Plan is Upgraded. If Plan has been Upgraded multiple times, use date of most recent Upgrade.</inlineHelpText>
    <label>Plan Upgrade Date</label>
    <type>Date</type>
</CustomField>