force-app/main/default/objects/Plan__c/fields/Plan_Upgraded__c.field-meta.xml
<CustomField>
    <fullName>Plan_Upgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box to be checked if plan upgrade is successfully completed.</description>
    <inlineHelpText>Box to be checked if plan upgrade is successfully completed.</inlineHelpText>
    <label>Plan Upgraded</label>
    <type>Checkbox</type>
</CustomField>