force-app/main/default/objects/Plan__c/fields/Plans__c.field-meta.xml
<CustomField>
    <fullName>Plans__c</fullName>
    <description>Plan Object Power of One formula</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Plan Object Power of One formula</inlineHelpText>
    <label>Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>