force-app/main/default/objects/Plan__c/fields/Potential_New_Savers__c.field-meta.xml
<CustomField>
    <fullName>Potential_New_Savers__c</fullName>
    <description>Number of potential new savers (Eligible - Eligible with Balance)</description>
    <inlineHelpText>Number of potential new savers (Eligible - Eligible with Balance)</inlineHelpText>
    <label>Potential New Savers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>