force-app/main/default/objects/Plan__c/fields/Potential_Participants__c.field-meta.xml
<CustomField>
    <fullName>Potential_Participants__c</fullName>
    <description>Potential Participants in the Plan</description>
    <inlineHelpText>Potential Participants in the Plan</inlineHelpText>
    <label>Potential Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>