force-app/main/default/objects/Plan__c/fields/Previous_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Plan_Effective_Date__c</fullName>
    <description>Date which previous plan was effective from</description>
    <formula>Implementation__r.Previous_Plan_Effective_Date__c</formula>
    <inlineHelpText>Date which previous plan was effective from</inlineHelpText>
    <label>Previous Plan Effective Date</label>
    <type>Date</type>
</CustomField>