force-app/main/default/objects/Plan__c/fields/Priority_Service__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the plan requires priority service</inlineHelpText>
    <label>Priority Service- Deprecated</label>
    <type>Checkbox</type>
</CustomField>