force-app/main/default/objects/Plan__c/fields/Priority_Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service_End_Date__c</fullName>
    <inlineHelpText>Date Priority Service expires. Entering a date in this field will check the Priority Service checkbox and it will stay checked until this date has passed.</inlineHelpText>
    <label>Priority Service End Date</label>
    <type>Date</type>
</CustomField>