force-app/main/default/objects/Plan__c/fields/Priority_Service_Formula__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service_Formula__c</fullName>
    <formula>Priority_Service_End_Date__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, plan requires priority service. To remove, remove date from Priority Service End Date field.</inlineHelpText>
    <label>Priority Service</label>
    <type>Checkbox</type>
</CustomField>