force-app/main/default/objects/Plan__c/fields/Product_Type1__c.field-meta.xml
<CustomField>
    <fullName>Product_Type1__c</fullName>
    <description>Product type</description>
    <inlineHelpText>Product type</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>