force-app/main/default/objects/Plan__c/fields/Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Products_Services__c.Type__c</field>
            <operation>equals</operation>
            <value>Payroll Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Products_Services__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>