force-app/main/default/objects/Plan__c/fields/Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing__c</fullName>
    <label>Profit Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Profit_Sharing</valueSetName>
    </valueSet>
</CustomField>