force-app/main/default/objects/Plan__c/fields/Profit_Sharing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing_Plan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used for Provision Mapping with FT Williams. Does plan have profit sharing?</description>
    <inlineHelpText>Used for Provision Mapping with FT Williams. Does plan have profit sharing?</inlineHelpText>
    <label>Profit Sharing Plan</label>
    <type>Checkbox</type>
</CustomField>