force-app/main/default/objects/Plan__c/fields/QACA_Safe_Harbor_Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>QACA_Safe_Harbor_Vesting_Schedule__c</fullName>
    <label>QACA Safe Harbor Vesting Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>2 Year Cliff</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>