force-app/main/default/objects/Plan__c/fields/QBOAD_Declined__c.field-meta.xml
<CustomField>
    <fullName>QBOAD_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QBOAD Resolution/Amendment declined by plan</description>
    <inlineHelpText>QBOAD Resolution/Amendment declined by plan</inlineHelpText>
    <label>QBOAD Declined</label>
    <type>Checkbox</type>
</CustomField>