force-app/main/default/objects/Plan__c/fields/QBOAD_Resolution__c.field-meta.xml
<CustomField>
    <fullName>QBOAD_Resolution__c</fullName>
    <description>Date QBOAD Resolution was completed</description>
    <inlineHelpText>Date QBOAD Resolution was completed</inlineHelpText>
    <label>QBOAD Resolution</label>
    <type>Date</type>
</CustomField>