force-app/main/default/objects/Plan__c/fields/QBOAD_Signer__c.field-meta.xml
<CustomField>
    <fullName>QBOAD_Signer__c</fullName>
    <description>Name of authorized QBOAD Signer</description>
    <inlineHelpText>Name of authorized QBOAD Signer</inlineHelpText>
    <label>QBOAD Signer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>