force-app/main/default/objects/Plan__c/fields/Recent_Client_Health_Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Recent_Client_Health_Check_Type__c</fullName>
    <description>Type of most recent client health check</description>
    <inlineHelpText>Type of most recent client health check</inlineHelpText>
    <label>Last Health Check Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Detailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>