force-app/main/default/objects/Plan__c/fields/Referral_HM_Score__c.field-meta.xml
<CustomField>
    <fullName>Referral_HM_Score__c</fullName>
    <description>Used for referral health metric score</description>
    <formula>IF(Date_of_Most_Recent_Referral__c &gt; (TODAY()-365),1,0)</formula>
    <inlineHelpText>Used for referral health metric score</inlineHelpText>
    <label>Referral HM Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>