force-app/main/default/objects/Plan__c/fields/Review_HM_Score__c.field-meta.xml
<CustomField>
    <fullName>Review_HM_Score__c</fullName>
    <description>Health metric review score. Saver review 20% weighting, sponsor/trustee review 80% weighting.</description>
    <formula>IF( 
(ISNULL( Most_Recent_Review_Saver__c )= True &amp;&amp; ISNULL( Most_Recent_Review_Sponsor_Trustee__c )= False), 
CASE((Most_Recent_Review_Sponsor_Trustee__c),1,-1,2,-1,3,0,4,1,5,1,0), 
IF( 
(ISNULL(Most_Recent_Review_Saver__c)= False &amp;&amp; ISNULL(Most_Recent_Review_Sponsor_Trustee__c)=True), 
CASE(( Most_Recent_Review_Saver__c),1,-1,2,-1,3,0,4,1,5,1,0), 
IF( 
(ISNULL(Most_Recent_Review_Saver__c)= False &amp;&amp; ISNULL(Most_Recent_Review_Sponsor_Trustee__c)=False), 
CASE(ROUND((Most_Recent_Review_Saver__c*0.2)+(Most_Recent_Review_Sponsor_Trustee__c*0.8), 0),1,-1,2,-1,3,0,4,1,5,1,0),0)))</formula>
    <inlineHelpText>Health metric review score. Saver review 20% weighting, sponsor/trustee review 80% weighting.</inlineHelpText>
    <label>Review HM Score (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>