force-app/main/default/objects/Plan__c/fields/RKS_ID__c.field-meta.xml
<CustomField>
    <fullName>RKS_ID__c</fullName>
    <description>ID for RKS (Record-Keeping System)</description>
    <inlineHelpText>ID for RKS (Record-Keeping System)</inlineHelpText>
    <label>RKS ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>