force-app/main/default/objects/Plan__c/fields/Roth__c.field-meta.xml
<CustomField>
    <fullName>Roth__c</fullName>
    <description>Does Plan Have Roth Provision?</description>
    <inlineHelpText>Does Plan Have Roth Provision?</inlineHelpText>
    <label>Roth</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Roth</valueSetName>
    </valueSet>
</CustomField>