force-app/main/default/objects/Plan__c/fields/Safe_Harbor_1__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for data mapping from FT Williams. Does plan have SH?</description>
    <inlineHelpText>Used for data mapping from FT Williams. Does plan have SH?</inlineHelpText>
    <label>Safe Harbor 1</label>
    <type>Checkbox</type>
</CustomField>