force-app/main/default/objects/Plan__c/fields/Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor__c</fullName>
    <description>401(k) Safe Harbor Formula</description>
    <inlineHelpText>401(k) Safe Harbor Formula</inlineHelpText>
    <label>Safe Harbor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Safe_Harbor</valueSetName>
    </valueSet>
</CustomField>