force-app/main/default/objects/Plan__c/fields/Safe_Harbor_Match_Determination_Period__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Match_Determination_Period__c</fullName>
    <description>For plans with Safe Harbor Match, confirm how often the matching formula can be determined</description>
    <inlineHelpText>For plans with Safe Harbor Match, confirm how often the matching formula can be determined</inlineHelpText>
    <label>Safe Harbor Match Determination Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Safe_Harbor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Per Pay Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>